crates/reap-pm-live/tests/ui/service_rank_cannot_be_forged.stderr
error[E0451]: fields `monotonic_receive_ns`, `source`, `connection_epoch`, `local_ingress_sequence` and `variant_rank` of struct `PmServiceKey` are private
  --> tests/ui/service_rank_cannot_be_forged.rs:6:9
   |
 5 |     let _ = PmServiceKey {
   |             ------------ in this type
 6 |         monotonic_receive_ns: 1,
   |         ^^^^^^^^^^^^^^^^^^^^ private field
 7 |         source: PmSourceHandle::from_ordinal(0),
   |         ^^^^^^ private field
 8 |         connection_epoch: ConnectionEpoch::new(1),
   |         ^^^^^^^^^^^^^^^^ private field
 9 |         local_ingress_sequence: IngressSequence::new(1),
   |         ^^^^^^^^^^^^^^^^^^^^^^ private field
10 |         variant_rank: 255,
   |         ^^^^^^^^^^^^ private field
